Updated some config files. Added the range tag to threshd by default, and created an index for Net-SNMP disk information.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -80,8 +80,7 @@ netapp.servercall, netapp.cifsrw, netapp.nfsv2rw, netapp.nfsv3rw, \
 netapp.fspercentkbyte, netapp.fskbyte, \
 netapp.fspercentinode, netapp.fsinode, netapp.fsfile, \
 netsnmp.context, \
-netsnmp.disk1, netsnmp.disk1percent, netsnmp.disk2, netsnmp.disk2percent, \
-netsnmp.disk3, netsnmp.disk3percent, netsnmp.disk4, netsnmp.disk4percent, netsnmp.disk5, netsnmp.disk5percent, \
+netsnmp.disk, netsnmp.diskpercent, \
 netsnmp.hrMemory, netsnmp.hrNumUsers, netsnmp.interrupts, \
 netsnmp.hrSystemUptime, netsnmp.loadavg, netsnmp.swapinout, \
 netBotz.air, netBotz.humid, netBotz.temp, \
@@ -2689,147 +2688,31 @@ report.netsnmp.diskio.opsize.command=--title="Disk IO Size" \
  GPRINT:writesize:MIN:"Min \\: %10.2lf %s" \
  GPRINT:writesize:MAX:"Max \\: %10.2lf %s\\n"
 
-report.netsnmp.disk1.name=Disk Space on 1 
-report.netsnmp.disk1.columns=ns-disk-1-tot, ns-disk-1-used
-report.netsnmp.disk1.type=nodeSnmp
-report.netsnmp.disk1.propertiesValues=ns-disk-1-name
-report.netsnmp.disk1.command=--title="Disk Space on {ns-disk-1-name}" \
- DEF:dtotalk={rrd1}:ns-disk-1-tot:AVERAGE \
- DEF:dusedk={rrd2}:ns-disk-1-used:AVERAGE \
+report.netsnmp.disk.name=Net-SNMP Disk Space 
+report.netsnmp.disk.columns=ns-dskTotal, ns-dskUsed
+report.netsnmp.disk.type=dskIndex
+report.netsnmp.disk.propertiesValues=ns-dskPath
+report.netsnmp.disk.command=--title="Disk Space on {ns-dskPath}" \
+ DEF:dtotalk={rrd1}:ns-dskTotal:AVERAGE \
+ DEF:dusedk={rrd2}:ns-dskUsed:AVERAGE \
  CDEF:dtotal=dtotalk,1024,* \
  CDEF:dused=dusedk,1024,* \
- LINE2:dtotal#0000ff:"Disk Space Total" \
+ LINE2:dtotal#0000ff:"Total:" \
  GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
- LINE2:dused#ff0000:"Disk Space Used" \
- GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE2:dused#ff0000:"Used :" \
+ GPRINT:dused:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
+ GPRINT:dused:MAX:"Max  \\: %8.2lf %s\\n"
   
-report.netsnmp.disk1percent.name=Percentage Disk Space on 1
-report.netsnmp.disk1percent.columns=ns-disk-1-pct
-report.netsnmp.disk1percent.type=nodeSnmp
-report.netsnmp.disk1percent.propertiesValues=ns-disk-1-name
-report.netsnmp.disk1percent.command=--title="Percent Space Used: {ns-disk-1-name}" \
- DEF:dpercent={rrd1}:ns-disk-1-pct:AVERAGE \
- LINE2:dpercent#0000ff:"% Disk Space Used" \
- GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
- GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
-
-report.netsnmp.disk2.name=Disk Space on 2 
-report.netsnmp.disk2.columns=ns-disk-2-tot, ns-disk-2-used
-report.netsnmp.disk2.type=nodeSnmp
-report.netsnmp.disk2.propertiesValues=ns-disk-2-name
-report.netsnmp.disk2.command=--title="Disk Space on {ns-disk-2-name}" \
- DEF:dtotalk={rrd1}:ns-disk-2-tot:AVERAGE \
- DEF:dusedk={rrd2}:ns-disk-2-used:AVERAGE \
- CDEF:dtotal=dtotalk,1024,* \
- CDEF:dused=dusedk,1024,* \
- LINE2:dtotal#0000ff:"Disk Space Total" \
- GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
- GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
- LINE2:dused#ff0000:"Disk Space Used" \
- GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
- GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
-
-report.netsnmp.disk2percent.name=Percentage Disk Space on 2
-report.netsnmp.disk2percent.columns=ns-disk-2-pct
-report.netsnmp.disk2percent.type=nodeSnmp
-report.netsnmp.disk2percent.propertiesValues=ns-disk-2-name
-report.netsnmp.disk2percent.command=--title="Percent Space Used: {ns-disk-2-name}" \
- DEF:dpercent={rrd1}:ns-disk-2-pct:AVERAGE \
- LINE2:dpercent#0000ff:"% Disk Space Used" \
- GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
- GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
-
-report.netsnmp.disk3.name=Disk Space on 3 
-report.netsnmp.disk3.columns=ns-disk-3-tot, ns-disk-3-used
-report.netsnmp.disk3.type=nodeSnmp
-report.netsnmp.disk3.propertiesValues=ns-disk-3-name
-report.netsnmp.disk3.command=--title="Disk Space on {ns-disk-3-name}" \
- DEF:dtotalk={rrd1}:ns-disk-3-tot:AVERAGE \
- DEF:dusedk={rrd2}:ns-disk-3-used:AVERAGE \
- CDEF:dtotal=dtotalk,1024,* \
- CDEF:dused=dusedk,1024,* \
- LINE2:dtotal#0000ff:"Disk Space Total" \
- GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
- GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
- LINE2:dused#ff0000:"Disk Space Used" \
- GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
- GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
-
-report.netsnmp.disk3percent.name=Percentage Disk Space on 3
-report.netsnmp.disk3percent.columns=ns-disk-3-pct
-report.netsnmp.disk3percent.type=nodeSnmp
-report.netsnmp.disk3percent.propertiesValues=ns-disk-3-name
-report.netsnmp.disk3percent.command=--title="Percent Space Used: {ns-disk-3-name}" \
- DEF:dpercent={rrd1}:ns-disk-3-pct:AVERAGE \
- LINE2:dpercent#0000ff:"% Disk Space Used" \
- GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
- GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
-
-report.netsnmp.disk4.name=Disk Space on 4 
-report.netsnmp.disk4.columns=ns-disk-4-tot, ns-disk-4-used
-report.netsnmp.disk4.type=nodeSnmp
-report.netsnmp.disk4.propertiesValues=ns-disk-4-name
-report.netsnmp.disk4.command=--title="Disk Space on {ns-disk-4-name}" \
- DEF:dtotalk={rrd1}:ns-disk-4-tot:AVERAGE \
- DEF:dusedk={rrd2}:ns-disk-4-used:AVERAGE \
- CDEF:dtotal=dtotalk,1024,* \
- CDEF:dused=dusedk,1024,* \
- LINE2:dtotal#0000ff:"Disk Space Total" \
- GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
- GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
- LINE2:dused#ff0000:"Disk Space Used" \
- GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
- GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
-
-report.netsnmp.disk4percent.name=Percentage Disk Space on 4
-report.netsnmp.disk4percent.columns=ns-disk-4-pct
-report.netsnmp.disk4percent.type=nodeSnmp
-report.netsnmp.disk4percent.propertiesValues=ns-disk-4-name
-report.netsnmp.disk4percent.command=--title="Percent Space Used: {ns-disk-4-name}" \
- DEF:dpercent={rrd1}:ns-disk-4-pct:AVERAGE \
- LINE2:dpercent#0000ff:"% Disk Space Used" \
- GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
- GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
-
-report.netsnmp.disk5.name=Disk Space on 5 
-report.netsnmp.disk5.columns=ns-disk-5-tot, ns-disk-5-used
-report.netsnmp.disk5.type=nodeSnmp
-report.netsnmp.disk5.propertiesValues=ns-disk-5-name
-report.netsnmp.disk5.command=--title="Disk Space on {ns-disk-5-name}" \
- DEF:dtotalk={rrd1}:ns-disk-5-tot:AVERAGE \
- DEF:dusedk={rrd2}:ns-disk-5-used:AVERAGE \
- CDEF:dtotal=dtotalk,1024,* \
- CDEF:dused=dusedk,1024,* \
- LINE2:dtotal#0000ff:"Disk Space Total" \
- GPRINT:dtotal:AVERAGE:" Avg  \\: %8.2lf %s" \
- GPRINT:dtotal:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dtotal:MAX:"Max  \\: %8.2lf %s\n" \
- LINE2:dused#ff0000:"Disk Space Used" \
- GPRINT:dused:AVERAGE:"Avg  \\: %8.2lf %s" \
- GPRINT:dused:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:dused:MAX:"Max  \\: %8.2lf %s\n"
-
-report.netsnmp.disk5percent.name=Percentage Disk Space on 5
-report.netsnmp.disk5percent.columns=ns-disk-5-pct
-report.netsnmp.disk5percent.type=nodeSnmp
-report.netsnmp.disk5percent.propertiesValues=ns-disk-5-name
-report.netsnmp.disk5percent.command=--title="Percent Space Used: {ns-disk-5-name}" \
- DEF:dpercent={rrd1}:ns-disk-5-pct:AVERAGE \
- LINE2:dpercent#0000ff:"% Disk Space Used" \
+report.netsnmp.diskpercent.name=NetSNMP Percentage Disk Space
+report.netsnmp.diskpercent.columns=ns-dskPercent
+report.netsnmp.diskpercent.type=dskIndex
+report.netsnmp.diskpercent.propertiesValues=ns-dskPath
+report.netsnmp.diskpercent.command=--title="Percent Space Used: {ns-dskPath}" \
+ DEF:dpercent={rrd1}:ns-dskPercent:AVERAGE \
+ LINE2:dpercent#0000ff:"% Used:" \
  GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:dpercent:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:dpercent:MAX:"Max  \\: %8.2lf %s\n"
