--- a/opennms-doc/pom.xml
+++ b/opennms-doc/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.opennms</groupId>
     <artifactId>opennms</artifactId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.3-tagtest1</version>
   </parent>
   <artifactId>opennms-doc</artifactId>
   <packaging>tgz</packaging>
