--- a/opennms-icmp/opennms-icmp-jni/pom.xml
+++ b/opennms-icmp/opennms-icmp-jni/pom.xml
@@ -2,14 +2,13 @@
   <parent>
     <artifactId>opennms-icmp</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.3-tagtest1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-icmp-jni</artifactId>
   <packaging>pom</packaging>
   <name>OpenNMS ICMP JNI Library</name>
   <modules>
-    <module>opennms-icmp-jni-${platform}</module>
   </modules>
   <dependencies>
     <dependency>
@@ -18,4 +17,31 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+      <id>tagging</id>
+      <activation>
+        <property>
+          <name>tagging</name>
+        </property>
+      </activation>
+      <modules>
+        <module>opennms-icmp-jni-freebsd</module>
+        <module>opennms-icmp-jni-linux</module>
+        <module>opennms-icmp-jni-macosx</module>
+        <module>opennms-icmp-jni-solaris</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>normal</id>
+      <activation>
+        <property>
+          <name>!tagging</name>
+        </property>
+      </activation>
+      <modules>
+        <module>opennms-icmp-jni-${platform}</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
