--- a/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/pom.xml
+++ b/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/pom.xml
@@ -2,15 +2,12 @@
   <parent>
     <artifactId>opennms-rrd-rrdtool</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.3-tagtest1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-rrdtool-jni</artifactId>
   <packaging>pom</packaging>
   <name>OpenNMS RRDTool JNI Library</name>
-  <modules>
-    <module>opennms-rrdtool-jni-${platform}</module>
-  </modules>
   <dependencies>
     <dependency>
       <groupId>org.opennms</groupId>
@@ -18,4 +15,31 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+      <id>tagging</id>
+      <activation>
+        <property>
+          <name>tagging</name>
+        </property>
+      </activation>
+      <modules>
+        <module>opennms-rrdtool-jni-freebsd</module>
+        <module>opennms-rrdtool-jni-linux</module>
+        <module>opennms-rrdtool-jni-macosx</module>
+        <module>opennms-rrdtool-jni-solaris</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>normal</id>
+      <activation>
+        <property>
+          <name>!tagging</name>
+        </property>
+      </activation>
+      <modules>
+        <module>opennms-rrdtool-jni-${platform}</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
