Port totals GPRINT from mib2.bits to mib2.HCbits

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -235,6 +235,10 @@ report.mib2.HCbits.command=--title="Bits In/Out (High Speed)" \
  CDEF:bitsIn=octIn,8,* \
  CDEF:bitsOut=octOut,8,* \
  CDEF:bitsOutNeg=0,bitsOut,- \
+ CDEF:outSum=bitsOut,{diffTime},* \
+ CDEF:inSum=bitsIn,{diffTime},* \
+ CDEF:totBits=octIn,octOut,+,8,* \
+ CDEF:totSum=totBits,{diffTime},* \
  AREA:bitsIn#00ff00:"In " \
  GPRINT:bitsIn:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:bitsIn:MIN:"Min  \\: %8.2lf %s" \
@@ -242,7 +246,10 @@ report.mib2.HCbits.command=--title="Bits In/Out (High Speed)" \
  AREA:bitsOutNeg#0000ff:"Out" \
  GPRINT:bitsOut:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:bitsOut:MIN:"Min  \\: %8.2lf %s" \
- GPRINT:bitsOut:MAX:"Max  \\: %8.2lf %s\\n"
+ GPRINT:bitsOut:MAX:"Max  \\: %8.2lf %s\\n" \
+ GPRINT:inSum:AVERAGE:"  Tot In  \\: %8.2lf %s" \
+ GPRINT:outSum:AVERAGE:" Tot Out  \\: %8.2lf %s" \
+ GPRINT:totSum:AVERAGE:" Tot  \\: %8.2lf %s\\n"
 
 report.mib2.octets.name=Bytes In/Out
 report.mib2.octets.columns=ifInOctets,ifOutOctets
