--- a/opennms-tools/pom.xml
+++ b/opennms-tools/pom.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?><project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project>
   <parent>
     <artifactId>opennms</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.4-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-tools</artifactId>
@@ -10,5 +11,6 @@
   <name>OpenNMS Tools</name>
   <modules>
     <module>opennms-rrd-stresser</module>
+    <module>mib2events</module>
   </modules>
 </project>
