--- a/opennms-snmp/opennms-snmp-test/pom.xml
+++ b/opennms-snmp/opennms-snmp-test/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>opennms-snmp</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.4-SNAPSHOT</version>
+    <version>1.3.5-alpha1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-snmp-test</artifactId>
