--- a/opennms-tools/mib2events/pom.xml
+++ b/opennms-tools/mib2events/pom.xml
@@ -1,15 +1,15 @@
-<?xml version="1.0"?><project>
+<?xml version="1.0"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>opennms-tools</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.4-SNAPSHOT</version>
+    <version>1.3.5-alpha1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms.netmgt.mib2events</groupId>
   <artifactId>mib2events</artifactId>
   <packaging>jar</packaging>
   <name>mib2events</name>
-  <version>1.3.4-SNAPSHOT</version>
+  <version>1.3.5-alpha1</version>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -22,7 +22,7 @@
       <groupId>org.opennms</groupId>
       <artifactId>opennms-config</artifactId>
       <scope>compile</scope>
-      <version>1.3.4-SNAPSHOT</version>
+      <version>1.3.5-alpha1</version>
     </dependency>
     <dependency>
       <groupId>net.percederberg.grammatica</groupId>
