--- a/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/opennms-rrdtool-jni-linux/pom.xml
+++ b/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/opennms-rrdtool-jni-linux/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>opennms-rrdtool-jni</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.5-SNAPSHOT</version>
+    <version>1.3.5</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-rrdtool-jni-linux</artifactId>
