make a property for eclipse plugin version

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-eclipse-plugin</artifactId>
-        <version>2.3</version>
+        <version>${maven.eclipse.plugin.version}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -441,6 +441,7 @@ opennms.home = ${opennms.home}
   <properties>
     <!-- maven surefire version added here so it could be overridden -->
     <maven.surefire.plugin.version>2.3</maven.surefire.plugin.version>
+    <maven.eclipse.plugin.version>2.3</maven.eclipse.plugin.version>
 
     <!-- turn down the default DEBUG logLevel. Override on the command line if you want -->
     <mock.logLevel>WARN</mock.logLevel>
