--- a/pom.xml
+++ b/pom.xml
@@ -611,12 +611,51 @@ opennms.home = ${opennms.home}
       <properties>
         <build.rrd.include.dir>/opt/local/include</build.rrd.include.dir>
         <build.rrd.lib.dir>/opt/local/lib</build.rrd.lib.dir>
-        <build.postgresql.include.dir>/opt/local/include/pgsql8/server</build.postgresql.include.dir>
   
         <install.rrdtool.bin>/opt/local/bin/rrdtool</install.rrdtool.bin>
       </properties>
     </profile>
 
+    <profile>
+      <id>darwinPorts-old-postgresql8</id>
+      <activation>
+        <file>
+          <exists>/opt/local/include/psql8/server/postgres.h</exists>
+        </file>
+      </activation>
+  
+      <properties>
+        <build.postgresql.include.dir>/opt/local/include/psql8/server</build.postgresql.include.dir>
+      </properties>
+    </profile>
+    
+
+    <profile>
+      <id>darwinPorts-postgres-postgresql81</id>
+      <activation>
+        <file>
+          <exists>/opt/local/include/postgresql81/server/postgres.h</exists>
+        </file>
+      </activation>
+  
+      <properties>
+        <build.postgresql.include.dir>/opt/local/include/postgresql81/server</build.postgresql.include.dir>
+      </properties>
+    </profile>
+    
+    <profile>
+      <id>darwinPorts-postgres-postgresql82</id>
+      <activation>
+        <file>
+          <exists>/opt/local/include/postgresql82/postgres.h</exists>
+        </file>
+      </activation>
+  
+      <properties>
+        <build.postgresql.include.dir>/opt/local/include/postgresql81</build.postgresql.include.dir>
+      </properties>
+    </profile>
+    
     <profile>
       <id>fink</id>
       
