added missing org.opennms.rrd.storeByGroup=false

--- a/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
+++ b/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
@@ -13,6 +13,7 @@ rrd.binary=@install.rrdtool.bin@
 version.full=@install.version@
 ksc.default.graphsPerLine=1
 distributed.layoutApplicationsVertically=false
+org.opennms.rrd.storeByGroup=false
 
 #
 # Set this property to enable the creating of trouble tickets from the alarm details page.
